# SqlDbClient

./: .gitignore  CHANGELOG  LICENSE  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
docs/source/: api.rst  changes.rst  conf.py  description.rst  features.rst  index.rst  intro.rst  modules.rst  sqldbclient.db_inspector.rst  sqldbclient.dialects.postgresql.rst  sqldbclient.dialects.postgresql.sql_view_factory.rst  sqldbclient.dialects.postgresql.sql_view_materializer.rst  sqldbclient.dialects.rst  sqldbclient.rst  sqldbclient.sql_asyncio.rst  sqldbclient.sql_asyncio.sql_async_executor.rst  sqldbclient.sql_asyncio.sql_async_planner.rst  sqldbclient.sql_engine_factory.rst  sqldbclient.sql_executor.rst  sqldbclient.sql_executor.sql_executor_builder.rst  sqldbclient.sql_executor.sql_executor_config.rst  sqldbclient.sql_history_manager.rst  sqldbclient.sql_history_manager.tables.executed_sql_query.rst  sqldbclient.sql_history_manager.tables.executed_sql_query_result.custom_sqlalchemy_types.rst  sqldbclient.sql_history_manager.tables.executed_sql_query_result.rst  sqldbclient.sql_history_manager.tables.rst  sqldbclient.sql_query_preparator.rst  sqldbclient.sql_transaction_manager.rst  sqldbclient.utils.pandas.rst  sqldbclient.utils.rst
notebooks/: Usage.ipynb
src/sql_executor/: __init__.py  log_decorators.py  sql_executor.py  sql_transaction_manager.py
src/sql_executor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sql_executor/async/: async_task_instance.py  sql_async_executor.py  sql_async_planner.py
src/sql_executor/sql_history_manager/: config.py  executed_sql_query.py  executed_sql_query_result.py  sql_history_manager.py
src/sqldbclient/: __init__.py  log_decorators.py  sql_engine_factory.py  sql_executor.py  utils.py
src/sqldbclient/db_inspector/: __init__.py  db_inspector.py
src/sqldbclient/sql_asyncio/: __init__.py  sql_async_executor.py  sql_async_planner.py
src/sqldbclient/sql_engine_factory/: __init__.py  sql_engine_factory.py
src/sqldbclient/sql_executor/: __init__.py  sql_executor.py
src/sqldbclient/sql_history_manager/: __init__.py  executed_sql_query.py  executed_sql_query_result.py  orm_config.py  sql_history_manager.py
src/sqldbclient/sql_query_preparator/: __init__.py  (+3 more)
tests/notebooks/: Example_pipeline.ipynb  Usage.ipynb
(+30 files in other folders)
