[build-system]
requires = [
    "setuptools>=42.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = 'sqldbclient'
version = "0.0.2"
authors = [
    { name="Yuriy Kozhev", email="yuriy.kozhev@gmail.com" },
]
description = "A SQL client software package, mainly for use in Jupyter Notebook environment"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "sqlalchemy",
    "sqlparse"
]

[project-urls]
"Homepage" = "https://example.org"
